<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.LoginActivity">

    <EditText
        android:id="@+id/signUpActivityEmailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/tvEmailLabel"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/signUpActivityPassEditText"
        app:layout_constraintLeft_toRightOf="@id/GLV1start"
        app:layout_constraintRight_toLeftOf="@id/GLV1end"
        app:layout_constraintTop_toBottomOf="@id/GLH3" />

    <EditText
        android:id="@+id/signUpActivityPassEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUpActivityEmailEditText"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/signUpActivityConfirmPassEditText"
        app:layout_constraintLeft_toRightOf="@id/GLV1start"
        app:layout_constraintRight_toLeftOf="@id/GLV1end"
        app:layout_constraintTop_toBottomOf="@id/signUpActivityEmailEditText" />

    <EditText
        android:id="@+id/signUpActivityConfirmPassEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUpActivityEmailEditText"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/passwordConfirm"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/signUpActivityCreateButton"
        app:layout_constraintLeft_toRightOf="@id/GLV1start"
        app:layout_constraintRight_toLeftOf="@id/GLV1end"
        app:layout_constraintTop_toBottomOf="@id/signUpActivityPassEditText" />

    <ImageView
        android:id="@+id/signInIcon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/sign_up"
        app:layout_constraintBottom_toTopOf="@id/GLH2"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toRightOf="@id/GLV1start"
        app:layout_constraintRight_toLeftOf="@id/GLV1end"
        app:layout_constraintTop_toBottomOf="@id/GLH1start" />

    <ProgressBar
        android:id="@+id/signUpActivityProgressBar"
        android:layout_width="24dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        app:layout_constraintLeft_toRightOf="@id/GLV1start"
        app:layout_constraintRight_toLeftOf="@id/GLV1end"
        app:layout_constraintTop_toBottomOf="@id/signUpActivityConfirmPassEditText" />

    <TextView
        android:id="@+id/tvLogin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tvHello"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvLogin2"
        app:layout_constraintLeft_toRightOf="@id/GLV1start"
        app:layout_constraintTop_toBottomOf="@+id/GLH2"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvLogin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/GLH3"
        app:layout_constraintLeft_toRightOf="@id/GLV1start"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLH1end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.93" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLH2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLH3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="signUpActivityLoginButton, signUpActivityProgressBar"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLV1start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLV1end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLH1start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpActivityCreateButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/deep_sky_blue"
        android:text="@string/createButtonTxt"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:cornerRadius="100dp"
        app:layout_constraintLeft_toRightOf="@id/GLV1start"
        app:layout_constraintRight_toLeftOf="@id/GLV1end"
        app:layout_constraintTop_toBottomOf="@id/signUpActivityConfirmPassEditText" />

    <TextView
        android:id="@+id/signUpActivityLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:textColor="@color/deep_sky_blue"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/alreadyCreateAccountTxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/GLV1start"
        app:layout_constraintRight_toLeftOf="@id/GLV1end"/>

</androidx.constraintlayout.widget.ConstraintLayout>